/*
 * $Id: ChangeLog,v 1.2755 2004/04/05 19:33:29 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-05 21:50 UTC+0200 Francesco Saverio Giudice <info / at / fsgiudice.com>
  * source/rtl/bkgtsks.c
    * fixed assignment of first task. Code cleaned.
  * hrbdll.bc
  * hrbdll.vc
    + Added source/rtl/fserror.c

2004-04-06 02:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/filesys.c
    ! unbalance parenthesis in line 282
  * source/rtl/fserror.c
    ! guard ENOTDIR, ENFILE, EFAULT, EROFS, ESPIPE with "#if defined()" for
    compilers that have no defines for them.
  * source/rtl/gtwvt/gtwvt.c
    ! minor correction to put external variables initialized in mainwin.c
      into extern "C"

2004-04-05 16:48 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/fserror.c
    * ETXTBSY inside #ifdef ETXTBSY

  * xharbour/source/rtl/filesys.c
    * compilation fixes

  * xharbour/source/rtl/hbffind.c
    * use new error codes

2004-04-05 09:10 UTC-0500 Sylvain Robert (s.robert/at/videotron.ca)
  * xharbour/source/rtl/fserror.c
    * Put case ETXTBSY under #if defined( HB_OS_UNIX )

2004-04-05 13:34 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  + xharbour/source/rtl/fserror.c
    + I missed it in my previous commit

2004-04-05 13:32 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/filesys.c
    ! BCC compilation fixed

2004-04-05 17:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/hbpcode.c
    - remmed: unused hb_compPrivateFind()
  * contrib/libct/files.c
    - remmed: unused osToHarbourMask()
  * source/rtl/gtwvt/gtwvt.v
    - remmed: unused hb_wvt_gtValidWindowSize()
  * contrib/libnf/n2color.c
    - remmed: unused _ftI2Color()
    ! fix inconsistent linkage : _ftGetColorStr()
  * contrib/unicode/hbc7.c