@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2755 2004/04/05 19:33:29 andijahja Exp $
+ * $Id: ChangeLog,v 1.2756 2004/04/05 19:40:32 fsgiudice Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-04-05 22:36 UTC+0200 Francesco Saverio Giudice <info / at / fsgiudice.com>
+  * source/rtl/bkgtsks.c
+    * fixed typo ( HB_THRAED_OPTIMIZE_STACK -> HB_THREAD_OPTIMIZE_STACK )
+      and added HB_THREAD_STUB in HB_BACKGROUNDRUN.
+      Thanks to Sylvain Robert
 
 2004-04-05 21:50 UTC+0200 Francesco Saverio Giudice <info / at / fsgiudice.com>
   * source/rtl/bkgtsks.c
